--- a/env/bot.env
+++ b/env/bot.env
@@ -6,5 +6,5 @@ DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=feedback_bot
 
-TG_TOKEN=<токен бота>
-TG_CHAT_ID=<id канала>
+TG_TOKEN=88005553535:KRYsdE8DSVL12ur1RfMaxLLWYhQ_idRT
+TG_CHAT_ID=-1001234567890
